Fix too high images

--- a/public/style.css
+++ b/public/style.css
@@ -764,7 +764,7 @@ select.filter {
     border-radius: 16px;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
-.glide-image img {
+.gslide-image img {
     object-fit: contain;
 }
 .filters-bar-transparent-block {
